// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackTop > props > :content[slot] > content-slot 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <span
    class="custom-node"
  >
    TNode
  </span>
  
</button>
`;

exports[`BackTop > props > :content[string/function] > content-TNode 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop > props > :default[slot] > default-slot 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <span
    class="custom-node"
  >
    TNode
  </span>
  
</button>
`;

exports[`BackTop > props > :default[string/function] > default-TNode 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  <span
    class="custom-node"
  >
    TNode
  </span>
</button>
`;

exports[`BackTop > props > :offset[Array] 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 10px; inset-block-end: 20px;"
  type="button"
>
  
  <svg
    class="t-icon t-icon-backtop t-back-top__icon"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M4 4H20V6H4V4ZM12 7.58579L18.9142 14.5L17.5 15.9142L13 11.4142V21H11V11.4142L6.5 15.9142L5.08579 14.5L12 7.58579Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    TOP
  </span>
  
</button>
`;

exports[`BackTop > props > :shape[circle/square] > shape-circle 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--circle t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <svg
    class="t-icon t-icon-backtop t-back-top__icon"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M4 4H20V6H4V4ZM12 7.58579L18.9142 14.5L17.5 15.9142L13 11.4142V21H11V11.4142L6.5 15.9142L5.08579 14.5L12 7.58579Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    TOP
  </span>
  
</button>
`;

exports[`BackTop > props > :shape[circle/square] > shape-square 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  <svg
    class="t-icon t-icon-backtop t-back-top__icon"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M4 4H20V6H4V4ZM12 7.58579L18.9142 14.5L17.5 15.9142L13 11.4142V21H11V11.4142L6.5 15.9142L5.08579 14.5L12 7.58579Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-back-top__text"
  >
    TOP
  </span>
  
</button>
`;

exports[`BackTop > props > :size[medium/small] > size-medium 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  BackTop
  
</button>
`;

exports[`BackTop > props > :size[medium/small] > size-small 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-s"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  BackTop
  
</button>
`;

exports[`BackTop > props > :theme[light/primary/dark] > theme-dark 1`] = `
<button
  class="t-back-top t-back-top--theme-dark t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  Text
  
</button>
`;

exports[`BackTop > props > :theme[light/primary/dark] > theme-light 1`] = `
<button
  class="t-back-top t-back-top--theme-light t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  Text
  
</button>
`;

exports[`BackTop > props > :theme[light/primary/dark] > theme-primary 1`] = `
<button
  class="t-back-top t-back-top--theme-primary t-back-top--square t-size-m"
  style="inset-inline-end: 24px; inset-block-end: 80px;"
  type="button"
>
  
  Text
  
</button>
`;
